# netconfig-api

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  tasks.py
.github/: copilot-instructions.md
docs/: api.md
netconfig_api/: __init__.py  main.py
netconfig_api/api/: __init__.py  hostname.py
netconfig_api/api/endpoints/: hostname.py
netconfig_api/models/: requests.py
netconfig_api/services/: network_config.py  network_device.py
netconfig_api/utils/: device_platforms.py  platform_adapters.py
tests/: __init__.py  test_main.py  test_models.py  test_utils.py
tests/api/: test_hostname.py
tests/services/: test_network_config.py
tests/test_api/: test_hostname.py
tests/test_models/: test_requests.py
